#73 fix replacement of index.html in archetype. Archetype's generated pom now has a profile to disable the frontend build. #36 correctly save the selected source when configuring a page.